--- a/index.html
+++ b/index.html
@@ -2,9 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <!--
+      UPDATED: Changed the icon href to our new sun favicon.
+      The path is relative to the public folder.
+    -->
+    <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <!--
+      UPDATED: Changed the title to our website name and a tagline.
+    -->
+    <title>KalpJyotish</title>
   </head>
   <body>
     <div id="root"></div>
